fixes: - change api base url; - fix tooltips for collapsed table list; - fix top margin for info tooltip for widget.

--- a/frontend/src/app/components/db-table-row-edit/db-table-row-edit.component.css
+++ b/frontend/src/app/components/db-table-row-edit/db-table-row-edit.component.css
@@ -42,7 +42,7 @@
 
 .widget-info {
     margin-left: auto;
-    margin-top: 16px;
+    margin-top: 12px;
 }
 
 .widget-info_centered {
